--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,9 @@ authors = [
 python = "^3.8"
 flytekit = "^1.1.1"
 awscli = "1.25.53"
+
+[tool.poetry.dev-dependencies]
+
+[build-system]
+requires = ["poetry-core>=1.0.8"]
+build-backend = "poetry.core.masonry.api"
